--- a/docs/latex/classWeBookServer.tex
+++ b/docs/latex/classWeBookServer.tex
@@ -2,6 +2,11 @@
 \label{classWeBookServer}\index{WeBookServer@{WeBookServer}}
 
 
+Daemon/\+Service H\+T\+TP Server.  
+
+
+
+
 {\ttfamily \#include $<$We\+Book\+Server.\+h$>$}
 
 Inheritance diagram for We\+Book\+Server\+:\begin{figure}[H]
@@ -13,7 +18,8 @@ Inheritance diagram for We\+Book\+Server\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{classWeBookServer_aa9fba70f0410597c227b76138f070653}{We\+Book\+Server}} (int argc, char $\ast$$\ast$argv)
+\mbox{\Hypertarget{classWeBookServer_aa9fba70f0410597c227b76138f070653}\label{classWeBookServer_aa9fba70f0410597c227b76138f070653}} 
+{\bfseries We\+Book\+Server} (int argc, char $\ast$$\ast$argv)
 \item 
 \mbox{\hyperlink{classWeBookServer_a9454e9ceb1f5667c607d763f8e440c7b}{$\sim$\+We\+Book\+Server}} ()
 \item 
@@ -41,16 +47,14 @@ void \mbox{\hyperlink{classWeBookServer_a80d53c455e91c2ce3ca41f7eb461119c}{start
 
 
 \doxysubsection{Detailed Description}
-class \mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} \+: public Qt\+Service$<$\+Q\+Core\+Application$>$ $\ast$ 
+Daemon/\+Service H\+T\+TP Server. 
+
+class \mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} \+: public Qt\+Service$<$\+Q\+Core\+Application$>$ $\ast$
+
+\mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} Constructor $\ast$ 
 
 \doxysubsection{Constructor \& Destructor Documentation}
-\mbox{\Hypertarget{classWeBookServer_aa9fba70f0410597c227b76138f070653}\label{classWeBookServer_aa9fba70f0410597c227b76138f070653}} 
-\index{WeBookServer@{WeBookServer}!WeBookServer@{WeBookServer}}
-\index{WeBookServer@{WeBookServer}!WeBookServer@{WeBookServer}}
-\doxysubsubsection{\texorpdfstring{WeBookServer()}{WeBookServer()}}
-{\footnotesize\ttfamily We\+Book\+Server\+::\+We\+Book\+Server (\begin{DoxyParamCaption}\item[{int}]{argc,  }\item[{char $\ast$$\ast$}]{argv }\end{DoxyParamCaption})}
-
-\mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} Constructor $\ast$ \mbox{\Hypertarget{classWeBookServer_a9454e9ceb1f5667c607d763f8e440c7b}\label{classWeBookServer_a9454e9ceb1f5667c607d763f8e440c7b}} 
+\mbox{\Hypertarget{classWeBookServer_a9454e9ceb1f5667c607d763f8e440c7b}\label{classWeBookServer_a9454e9ceb1f5667c607d763f8e440c7b}} 
 \index{WeBookServer@{WeBookServer}!````~WeBookServer@{$\sim$WeBookServer}}
 \index{````~WeBookServer@{$\sim$WeBookServer}!WeBookServer@{WeBookServer}}
 \doxysubsubsection{\texorpdfstring{$\sim$WeBookServer()}{~WeBookServer()}}
