--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -6,5 +6,5 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classQLoggerLevel}{Q\+Logger\+Level}} }{\pageref{classQLoggerLevel}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classQLogger_1_1QLoggerManager}{Q\+Logger\+::\+Q\+Logger\+Manager}} \\*Manages the different destination files that we would like to have }{\pageref{classQLogger_1_1QLoggerManager}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classQLogger_1_1QLoggerWriter}{Q\+Logger\+::\+Q\+Logger\+Writer}} }{\pageref{classQLogger_1_1QLoggerWriter}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} }{\pageref{classWeBookServer}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classWeBookServer}{We\+Book\+Server}} \\*Daemon/\+Service H\+T\+TP Server }{\pageref{classWeBookServer}}{}
 \end{DoxyCompactList}
